wire_bridge/build/log/idf_py_stderr_output_96843
Command: make -j 6 all
Configuration Report                                         
 ─────────────────────────────────────────────────────────── 
   Parser Version: 1                                         
   Verbosity: default                                        
   Defaults policy: sdkconfig                                
   Status: Finished with notifications                       
                                                             
  Default Value Mismatch                                     
   ───────────────────────────────────────────────────────   
    Using sdkconfig default values                           
    Choice symbols with different default selection          
    between sdkconfig and Kconfig                            
    LIBC_STDOUT_LINE_ENDING: Kconfig default                 
    selection: choice deselected, sdkconfig default          
    selection: LIBC_STDOUT_LINE_ENDING_CRLF                  
    LIBC_STDIN_LINE_ENDING: Kconfig default selection:       
    choice deselected, sdkconfig default selection:          
    LIBC_STDIN_LINE_ENDING_CR                                
   ───────────────────────────────────────────────────────   
 ─────────────────────────────────────────────────────────── 
/Users/macbookair/esp/ETH_02/wire_bridge/main/eth_tap.c: In function 'wb_eth_send':
/Users/macbookair/esp/ETH_02/wire_bridge/main/eth_tap.c:115:37: error: passing argument 2 of 'esp_eth_transmit' discards 'const' qualifier from pointer target type [-Werror=discarded-qualifiers]
  115 |     return (esp_eth_transmit(s_eth, frame, len) == ESP_OK);
      |                                     ^~~~~
In file included from /Users/macbookair/esp-idf/components/esp_eth/include/esp_eth.h:15,
                 from /Users/macbookair/esp/ETH_02/wire_bridge/main/eth_tap.c:8:
/Users/macbookair/esp-idf/components/esp_eth/include/esp_eth_driver.h:320:56: note: expected 'void *' but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
  320 | esp_err_t esp_eth_transmit(esp_eth_handle_t hdl, void *buf, size_t length);
      |                                                  ~~~~~~^~~
/Users/macbookair/esp/ETH_02/wire_bridge/main/bridge_wifi.c: In function 'set_static_ip_ap':
/Users/macbookair/esp/ETH_02/wire_bridge/main/bridge_wifi.c:20:5: error: implicit declaration of function 'IP4_ADDR' [-Wimplicit-function-declaration]
   20 |     IP4_ADDR(&ip.ip,      WB_NET_BASE_IP0, WB_NET_BASE_IP1, WB_NET_BASE_IP2, WB_IP_AP_LAST);
      |     ^~~~~~~~
/Users/macbookair/esp/ETH_02/wire_bridge/main/bridge_wifi.c: In function 'ip_event_handler':
/Users/macbookair/esp/ETH_02/wire_bridge/main/bridge_wifi.c:70:5: warning: 'IP_EVENT_AP_STAIPASSIGNED' is deprecated: Use IP_EVENT_ASSIGNED_IP_TO_CLIENT instead [-Wdeprecated-declarations]
   70 |     if (id == IP_EVENT_AP_STAIPASSIGNED) {
      |     ^~
In file included from /Users/macbookair/esp-idf/components/esp_netif/include/esp_netif.h:13,
                 from /Users/macbookair/esp-idf/components/esp_wifi/include/esp_wifi_default.h:10,
                 from /Users/macbookair/esp-idf/components/esp_wifi/include/esp_wifi.h:57,
                 from /Users/macbookair/esp/ETH_02/wire_bridge/main/bridge_wifi.c:8:
/Users/macbookair/esp-idf/components/esp_netif/include/esp_netif_types.h:102:5: note: declared here
  102 |     IP_EVENT_AP_STAIPASSIGNED __attribute__((deprecated("Use IP_EVENT_ASSIGNED_IP_TO_CLIENT instead")))
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
/Users/macbookair/esp/ETH_02/wire_bridge/main/bridge_wifi.c: At top level:
/Users/macbookair/esp/ETH_02/wire_bridge/main/bridge_wifi.c:29:13: warning: 'set_static_ip_sta' defined but not used [-Wunused-function]
   29 | static void set_static_ip_sta(void)
      |             ^~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/bridge_wifi.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
cc1: all warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/eth_tap.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
